fixed menu placement on mobile

--- a/_gh_pages/css/main.css
+++ b/_gh_pages/css/main.css
@@ -174,6 +174,9 @@ pre {
   float: right;
   line-height: 56px;
   margin-top: 100px; }
+  @media screen and (max-width: 600px) {
+    .site-nav {
+      margin-top: 30px; } }
   .site-nav .menu-icon {
     display: none; }
   .site-nav .page-link {
