--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,10 +37,16 @@
     }
 }
 
+
+
 .site-nav {
     float: right;
     line-height: 56px;
     margin-top: 100px;
+     @include media-query($on-palm) {
+	     margin-top: 30px;
+	     }
+    
     
 
     .menu-icon {
@@ -56,12 +62,8 @@
             margin-left: 20px;
         }
     }
-    
-@include media-query($on-palm) {
-	.site-nav {
-		margin-top: 30px;
-	}
-}
+  
+
 
 
 .page-link {
